--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,28 @@
 [client]
 showSidebarNavigation = false
+toolbarMode = "minimal"
+caching = "true"
+displayEnabled = true
+
 [theme]
 base="dark"
 primaryColor="#FF4B4B"
 backgroundColor="#1E1E1E"
 secondaryBackgroundColor="#262626"
 textColor="#FFFFFF"
+
+
 [server]
 enableXsrfProtection = false
+headless = true
+
+[ui]
+wideMode = true
+
+
+[global]
+disableWidgetStateDuplicationWarning = false
+
+[browser]
+gatherUsageStats = false
+
